#9448 reload bivariate layers from insights-api every 10 minutes and return cached values